bizinikiwi/pezframe/support/test/tests/runtime_ui/missing_pezpallet_index.stderr
error: Missing pezpallet index for pezpallet declaration. Please add `#[runtime::pezpallet_index(...)]`
  --> tests/runtime_ui/missing_pezpallet_index.rs:24:5
   |
24 |     pub type System = pezframe_system;
   |     ^^^
